--- a/tests_files/data/auction_data.yaml
+++ b/tests_files/data/auction_data.yaml
@@ -2,12 +2,12 @@ bidders:
   bidder0:
     start_bid: 50000
     start_url: ''
-    browser: chrome
+    browser: firefox
   bidder1:
     last_bid: ''
     start_bid: 49000
     start_url: ''
-    browser: chrome
+    browser: firefox
 observer:
-  browser: chrome
+  browser: firefox
   start_url: ''
