--- a/tests_files/data/brokers.yaml
+++ b/tests_files/data/brokers.yaml
@@ -49,7 +49,8 @@ Zakpro:
         provider1:      Zakpro_Provider2
         tender_owner:   Zakpro_Owner
         viewer:         Zakpro_Viewer
-    timeout_on_wait: 450
+    timeout_on_wait: 1
+    period_interval: 1
 Quinta:
     intervals:
         default:
