--- a/buildout.cfg
+++ b/buildout.cfg
@@ -55,7 +55,7 @@ robot_tests.broker.prom         = git ${remotes:gh}openprocurement/robot_tests.b
 robot_tests.broker.publicbid    = git ${remotes:gh}openprocurement/robot_tests.broker.publicbid.git
 robot_tests.broker.publicportal = git ${remotes:gh}openprocurement/robot_tests.broker.publicportal.git
 robot_tests.broker.smarttender  = git ${remotes:gh}openprocurement/robot_tests.broker.smarttender.git
-robot_tests.broker.zakpro  = git ${remotes:gh}fifajan/robot_tests.broker.zakpro.git
+robot_tests.broker.zakpro  = git svovkotrub@x-p.swdevelop.net:/swdev/robot_tests.broker.zakpro
 
 [versions]
 fake-factory = 0.5.3
