--- a/buildout.cfg
+++ b/buildout.cfg
@@ -48,6 +48,7 @@ gh_push = git@github.com:
 barbecue                        = git ${remotes:gh}openprocurement/barbecue.git
 openprocurement_client          = git ${remotes:gh}openprocurement/openprocurement.client.python.git
 robot_tests.broker.dzo          = git ${remotes:gh}openprocurement/robot_tests.broker.dzo.git
+robot_tests.broker.zakpro  =  git ${remotes:gh}openprocurement/robot_tests.broker.zakpro.git
 robot_tests.broker.etender      = git ${remotes:gh}openprocurement/robot_tests.broker.etender.git
 robot_tests.broker.newtend      = git ${remotes:gh}openprocurement/robot_tests.broker.newtend.git
 robot_tests.broker.privatmarket = git ${remotes:gh}openprocurement/robot_tests.broker.privatmarket.git
@@ -55,7 +56,6 @@ robot_tests.broker.prom         = git ${remotes:gh}openprocurement/robot_tests.b
 robot_tests.broker.publicbid    = git ${remotes:gh}openprocurement/robot_tests.broker.publicbid.git
 robot_tests.broker.publicportal = git ${remotes:gh}openprocurement/robot_tests.broker.publicportal.git
 robot_tests.broker.smarttender  = git ${remotes:gh}openprocurement/robot_tests.broker.smarttender.git
-robot_tests.broker.zakpro  =  git ${remotes:gh}openprocurement/robot_tests.broker.zakpro
 
 [versions]
 fake-factory = 0.5.3
